# STM32_CubeMX_CMake

./: .mxproject  CMakeLists.txt  Makefile  readme.txt  stm32-cmake-bare2.ioc
Core/Src/: gpio.c  main.c
Drivers/CMSIS/Device/ST/STM32F1xx/Include/: stm32f1xx.h
